syntax = "proto3";

option csharp_namespace = "ImageProductService";

service GrpcImageProduct {
	rpc ProductImageAdd(ProductImageAddModelRequest) returns (ProductImageAddModelResponse);
}

message ProductImageAddModelRequest {
	ProductModel ProductModel = 1;
	FileUploadModel FileUploadModel = 2;
}

message FileUploadModel {
	string Name = 1;
    string Path = 2;
	bytes Files = 3;
}

message ProductModel {
	string ProductId = 1;
}

message ProductImageAddModelResponse {
	bool Result = 1;
}